# bfic

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ArgParse.hpp  Optional.hpp  String.hpp
src/: ArgParse.cpp  CMakeLists.txt  main.cpp
